# JiraFetch-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  test_typer.py
docs/: Requirements.md
src/jira_issue_md_agent/: __init__.py  cli.py  config.py  issue_fetcher.py  jira_client.py  models.py  normalizer.py  renderer.py  writer.py
