[tool.poetry]
name = "jira-issue-md-agent"
version = "0.1.0"
description = "A CLI tool to fetch Jira issues and convert them to development-ready Markdown files"
authors = ["Bernie"]
readme = "README.md"
packages = [{include = "jira_issue_md_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.20.0"}
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
ruff = "^0.1.8"

[tool.poetry.scripts]
jira-md = "jira_issue_md_agent.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
